--- a/views/learn/learn-home.ejs
+++ b/views/learn/learn-home.ejs
@@ -15,8 +15,8 @@
             <h2>Learn Here on Genius Coding</h2>
             <div class="course">
                 <div class="img-holder two">
-                    <div class="html" style="background-image: url('/images/site-images/card-images/html.png');"></div>
-                    <div class="css" style="background-image: url('/images/site-images/card-images/css.png')"></div>
+                    <div class="html"></div>
+                    <div class="css"></div>
                 </div>
                 <a class="course-title-link" href="/course/62d06b7ce0bcc73738ea3146">
                     <h3 class="noneT"><span class="htmlT">HTML</span> &amp; <span class="cssT">CSS</span></h3>
@@ -28,10 +28,10 @@
             </div>
             <div class="tutorial">
                 <div class="img-holder two">
-                    <div class="html" style="background-image: url('/images/site-images/card-images/html.png');"></div>
-                    <div class="css" style="background-image: url('/images/site-images/card-images/css.png')"></div>
+                    <div class="html"></div>
+                    <div class="css"></div>
                 </div>
-                <a class="course-title-link" href="/tutorial/[tutorial_id]">
+                <a class="course-title-link" href="/tutorial/62d72caf980b65242636a913">
                     <h3 class="noneT">Helpful Menu</h3>
                 </a>
                 <div class="tags">
@@ -41,7 +41,7 @@
             </div>
             <div class="reference">
                 <div class="img-holder html">
-                    <div class="html" style="background-image: url('/images/site-images/card-images/html.png');"></div>
+                    <div class="html"></div>
                 </div>
                 <a class="course-title-link" href="/reference/html">
                     <h3 class="noneT">Quick Reference</h3>
