--- a/public/scss/header.scss
+++ b/public/scss/header.scss
@@ -40,15 +40,69 @@ header {
             display: inline-block;
             width: max-content;
         }
+        &:hover { width: 100%; }
+    }
+    &.active { background-color: rgba(255,255,255,0.2); }
+    &:hover {
+        color: $primary-color;
+        background-color: $secondary-color;
     }
 }
-.nav-list-item-link.with-material:hover {
-    width: 100%;
-}
-.nav-list-item-link.active {
-    background-color: rgba(255,255,255,0.2);
-}
-.nav-list-item-link:hover {
-    color: $primary-color;
-    background-color: $secondary-color;
+
+.notification-list {
+    width: 300px;
+    position: fixed;
+    @include box-shadow();
+    transition: top 0.3s,
+                opacity 0.3s,
+                pointer-events 0.3s 0.5s;
+    background-color: $other-color;
+    pointer-events: none;
+    z-index: 100;
+    right: 10px;
+    opacity: 0;
+    top: 25px;
+
+    h4 {
+        margin: 0;
+        padding: 1rem;
+    }
+    &.open {
+        pointer-events: all;
+        opacity: 1;
+        top: 50px;
+    }
+
+    .notification-list-item {
+        display: grid;
+        align-items: center;
+        color: $accent2-color;
+        grid-template-columns: 50px auto;
+        grid-template-rows: 1.25rem 1.5rem max-content;
+        text-decoration: none;
+        min-height: 60px;
+        padding: 0.5rem;
+
+        img {
+            grid-row: 1 / span 3;
+            border: 3px solid $secondary-color;
+            width: calc(100% - 0.5rem);
+            margin-top: 0.8rem;
+            border-radius: 50%;
+            align-self: start;
+        }
+        .notification-date {
+            font-size: 0.9em;
+            color: $primary-color;
+        }
+        .notification-message-from {
+            font-weight: bold;
+        }
+        .notification-message-content {
+            font-size: 0.95em;
+        }
+        & + .notification-list-item {
+            border-top: 1px solid rgba($primary-color, 0.5);
+        }
+    }
 }
