--- a/views/500.ejs
+++ b/views/500.ejs
@@ -2,7 +2,31 @@
 </head>
 
 <body>
-    <%- include('includes/nav.ejs') %>
+    <div class="backdrop hidden"></div>
+    <header>
+        <div class="logo-name">
+            <div class="logo">
+                <div class="green"></div>
+                <div class="yellow"></div>
+                <div class="gray"></div>
+                <div class="blue"></div>
+            </div>
+            <a href="/"><h1>Genius Coding</h1></a>
+        </div>
+        <nav>
+            <ul class="nav-list">
+                <% if (links.length > 0) { %>
+                    <% links.forEach((link) => { %>
+                        <li class="nav-list-item" <%- link.class ? `title='${link.title}'` : '' %>>
+                            <a class="nav-list-item-link with-material <%= (link.href === '/' ? (link.href === path ? 'active' : '') : (path.includes(link.href) ? 'active' : '')) %>" data-temp="<%= path %>" href="<%= link.href %>">
+                                <span class="material-symbols-outlined"><%= link.text %></span><span class="link-message"><%= link.title %></span>
+                            </a>
+                        </li>
+                    <% }) %>
+                <% } %>
+            </ul>
+        </nav>
+    </header>
     <main>
         <div class="centerContent">
             <div class="centeredPart">
